<resources>
    <string name="app_name">Untitled Grocery App</string>
    <string name="grocery_app">Grocery App</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="grocery_n_t_t_t_tapp">Grocery \t\t\t\tApp</string>
    <string name="create_account_name">Name</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_vpassword">Password</string>
    <string name="button_create_account">Create Account</string>
</resources>
